Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -78,7 +78,7 @@
                                     </p:tab>
                                     <p:tab title="5) Category Reports">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Summary By Bill Type" action="report_cashier_detailed_user_by_billType"/>                                
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Summary By Bill Type" action="#{cashierReportController.navigateToReportCashierDetailedUserByBillType()}"/>                                
                                         </div>
                                     </p:tab>
                                     <p:tab title="6) Bill Lists">
