--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -90,13 +90,13 @@
                                     </p:tab>
                                     <p:tab title="7) Cashier Reports(Bill Fee Payment)">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Cashier Report" action="/reportCashierBillFeePayment/report_cashier_detailed_by_user.xhtml" actionListener="#{commonReport.recreteModal}" />
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="2) Cashier Summary" action="/reportCashierBillFeePayment/report_cashier_summery_by_user" actionListener="#{commonReport.recreteModal}" />
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Cashier Report" action="#{commonReport.navigateToReportCashierDetailedByUser()}" actionListener="#{commonReport.recreteModal}" />
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="2) Cashier Summary" action="#{commonReport.navigateToReportCashierSummeryByUser()}" actionListener="#{commonReport.recreteModal}" />
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="3) All Cashier Report" action="report_cashier_summery_all.xhtml" actionListener="#{cashierReportController.recreteModal}" rendered="false"/>
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="4) All Cashier Summary " action="report_cashier_summery_all_total_only.xhtml" actionListener="#{cashierReportController.recreteModal}" rendered="false"/>
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="5) All Cashier Summary Without Professional" action="report_cashier_summery_all_total_only_without_pro.xhtml" actionListener="#{cashierReportController.recreteModal}" rendered="false"/>
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="6) Bill List" action="/reportCashierBillFeePayment/opd_search_user_bills.xhtml" rendered="false"/>
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="7) Department wise Income" action="/reportCashierBillFeePayment/report_cashier_summery_departmentwise.xhtml" rendered="true"/>
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="7) Department wise Income" action="#{commonReport.navigateToReportCashierSummeryByDepartmentwise()}" rendered="true"/>
                                         </div>
                                     </p:tab>
                                     <p:tab title="8) Cashier Reports(Payment)">
