--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -101,10 +101,10 @@
                                     </p:tab>
                                     <p:tab title="8) Cashier Reports(Payment)">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Cashier Report" action="/reportCashierBillFeePayment/report_cashier_detailed_by_user_payment.xhtml" actionListener="#{opdPreBillReportController.makeNull}" />
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="2) Cashier Summary" action="/reportCashierBillFeePayment/report_cashier_summery_by_user_payment.xhtml" actionListener="#{opdPreBillReportController.makeNull}" />
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="3) All Cashier Report" action="/reportCashierBillFeePayment/report_cashier_summery_all.xhtml" actionListener="#{opdPreBillReportController.makeNull}"/>
-                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="4) All Cashier Summary " action="/reportCashierBillFeePayment/report_cashier_summery_all_total_only.xhtml" actionListener="#{opdPreBillReportController.makeNull}"/>
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="1) Cashier Report" action="#{opdPreBillReportController.navigateToReportCashierDetailedByUserPayment()}" actionListener="#{opdPreBillReportController.makeNull}" />
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="2) Cashier Summary" action="#{opdPreBillReportController.navigateToReportCashierSummeryByUserPayment()}" actionListener="#{opdPreBillReportController.makeNull}" />
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="3) All Cashier Report" action="#{opdPreBillReportController.navigateToReportCashierSummeryAll()}" actionListener="#{opdPreBillReportController.makeNull}"/>
+                                            <p:commandButton styleClass="linkButton600600" ajax="false" value="4) All Cashier Summary " action="#{opdPreBillReportController.navigateToReportCashierSummeryAllTotalOnly()}" actionListener="#{opdPreBillReportController.makeNull}"/>
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="5) All Cashier Summary Without Professional" action="report_cashier_summery_all_total_only_without_pro.xhtml" actionListener="#{opdPreBillReportController.makeNull}" rendered="false"/>
                                             <p:commandButton styleClass="linkButton600600" ajax="false" value="6) Bill List" action="/reportCashierBillFeePayment/opd_search_user_bills.xhtml" rendered="false" />
                                         </div>
