--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -21,7 +21,7 @@
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" value="1) Cashier Report" action="#{commonReport.navigateToReportCashierDetailedByUser1()}" actionListener="#{commonReport.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="2) Cashier Summary" action="#{commonReport.navigateToReportCashierSummaryByUser()}" actionListener="#{commonReport.recreteModal}"/>
-                                            <p:commandButton class="w-100" ajax="false" value="3) All Cashier Report" action="/reportCashier/report_cashier_summery_all.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
+                                            <p:commandButton class="w-100" ajax="false" value="3) All Cashier Report" action="#{commonReport.navigateToReportCashierSummaryAll()}" actionListener="#{cashierReportController.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" value="4) All Cashier Summary " action="/reportCashier/report_cashier_summery_all_total_only.xhtml" actionListener="#{cashierReportController.recreteModal}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="5) Cashier Detailed Report by Department" 
