--- a/src/main/webapp/admin/institutions/departments.xhtml
+++ b/src/main/webapp/admin/institutions/departments.xhtml
@@ -19,71 +19,54 @@
                         <h1><h:outputText value="List"/></h1>
                         <p:dataTable value="#{departmentController.items}" var="item">
 
-                            <p:column>
+                            <p:column sortBy="#{item.institution.name}" filterBy="#{item.institution.name}" filterMatchMode="contains">
                                 <f:facet name="header">
                                     <h:outputText value="Institution"/>
                                 </f:facet>
-                                <h:outputText value="#{item.institution}"/>
+                                <h:outputText value="#{item.institution.name}"/>
                             </p:column>
 
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Code"/>
-                                </f:facet>
-                                <h:outputText value="#{item.departmentCode}"/>
-                            </p:column>
 
-                            <p:column>
+
+                            <p:column sortBy="#{item.name}" filterBy="#{item.name}" filterMatchMode="contains">
                                 <f:facet name="header">
                                     <h:outputText value="Name"/>
                                 </f:facet>
                                 <h:outputText value="#{item.name}"/>
                             </p:column>
 
-                            <p:column>
+                            <p:column 
+                                sortBy="#{item.code}" 
+                                filterBy="#{item.code}" filterMatchMode="contains">
+                                <f:facet name="header">
+                                    <h:outputText value="Code"/>
+                                </f:facet>
+                                <h:outputText value="#{item.code}"/>
+                            </p:column>
+
+                            <p:column sortBy="#{item.address}" filterBy="#{item.address}" filterMatchMode="contains">
                                 <f:facet name="header">
                                     <h:outputText value="Address"/>
                                 </f:facet>
                                 <h:outputText value="#{item.address}"/>
                             </p:column>
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Telephone1"/>
-                                </f:facet>
-                                <h:outputText value="#{item.telephone1}"/>
-                            </p:column>
-                            <p:column>
-                                <f:facet name="header">
-                                    <h:outputText value="Telephone2"/>
-                                </f:facet>
-                                <h:outputText value="#{item.telephone2}"/>
-                            </p:column>
 
                             <p:column>
                                 <f:facet name="header">
-                                    <h:outputText value="Email"/>
-                                </f:facet>
-                                <h:outputText value="#{item.email}"/>
-                            </p:column>
-                            <p:column  >
-                                <f:facet name="header">
                                     <h:outputText value="Actions"/>
                                 </f:facet>
-                                <h:commandButton class="btn btn-success"  value="Edit" 
-                                                 action="#{departmentController.toEditDepartment()}" 
-                                                 >
-                                    <f:setPropertyActionListener value="#{item}" target="#{departmentController.current}" >
-                                    </f:setPropertyActionListener>
-                                </h:commandButton>
-                                <h:commandButton class="btn btn-danger"  value="Delete" 
+                                <p:commandButton icon="pi pi-pencil" styleClass="ui-button-success" style="margin-right: 10px;" 
+                                                 action="#{departmentController.toEditDepartment()}">
+                                    <f:setPropertyActionListener value="#{item}" target="#{departmentController.current}" />
+                                </p:commandButton>
+                                <p:commandButton icon="pi pi-trash" styleClass="ui-button-danger" 
                                                  action="#{departmentController.deleteDepartment()}" 
                                                  onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                             return false;"
-                                                 >
-                                    <f:setPropertyActionListener value="#{item}" target="#{departmentController.current}" >
-                                    </f:setPropertyActionListener>
-                                </h:commandButton>
+                                 return false;">
+                                    <f:setPropertyActionListener value="#{item}" target="#{departmentController.current}" />
+                                </p:commandButton>
                             </p:column>
+
                         </p:dataTable>
                     </h:form>
                 </f:view>
