Closes Issue#888 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -52,7 +52,7 @@
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="1) Sale Detail - By Bill " 
-                                                             action="#{commonReport.navigateToPharmacyReportSaleByDateDetail()}.xhtml"
+                                                             action="#{commonReport.navigateToPharmacyReportSaleByDateDetail()}"
                                                              actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="2) Sale Detail - By Bill Items" 
