Closes Issue#892 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -64,7 +64,7 @@
                                                              actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="4) Sale Summary By Discount Scheme Summary"
-                                                             action="pharmacy_report_sale_by_date_detail_by_payment_scheme_1.xhtml" 
+                                                             action="#{commonReport.navigateToPharmacyReportSaleByDateDetailByPaymentScheme1()}" 
                                                              actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false"  style="text-align: left"
                                                              value="5) Sale Detail - By Paymentmethod"
