--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -68,7 +68,7 @@
                                                              actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false"  style="text-align: left"
                                                              value="5) Sale Detail - By Paymentmethod"
-                                                             action="pharmacy_report_sale_by_date_detail_payment_method.xhtml" 
+                                                             action="#{commonReport.navigateToPharmacyReportSaleByDateDetailByPaymentMethod()}" 
                                                              actionListener="#{pharmacySaleReport.makeNull}"/>
                                         </div>
                                     </p:tab>  
