Closes Issue#898 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -77,7 +77,7 @@
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="1) GRN Summary" action="#{pharmacySaleReport.navigatePharmacyReportGrnDetail()}" actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="2) GRN Summary By Supplier" action="pharmacy_report_grn_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="2) GRN Summary By Supplier" action="#{pharmacySaleReport.navigatePharmacyReportGrnDetailBySupplier()}" actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="3) GRN Bill Item Report" action="/pharmacy/pharmacy_report_grn_billitem.xhtml" actionListener="#{pharmacySaleReport.makeNull}"></p:commandButton>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
