Closes Issue#901 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -81,7 +81,7 @@
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="3) GRN Bill Item Report" action="#{pharmacySaleReport.navigatePharmacyReportGrnBillItem()}" actionListener="#{pharmacySaleReport.makeNull}"></p:commandButton>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="4) GRN Registory" action="/pharmacy/pharmacy_report_grn_registory.xhtml" ></p:commandButton>
+                                                             value="4) GRN Registory" action="#{pharmacySaleReport.navigatePharmacyReportGrnRegistory()}" ></p:commandButton>
                                         </div>
                                     </p:tab>  
                                     <p:tab title="5) Purchase">
