Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/lims/index.xhtml
+++ b/src/main/webapp/admin/lims/index.xhtml
@@ -14,7 +14,8 @@
             <div class="col-md-3" >
                 <h:form>
                     <p:panel header="Manage Metadata" rendered="true">
-                        <p:accordionPanel activeIndex="#{investigationCategoryController.manageItemIndex}" >
+                        <p:accordionPanel 
+                            activeIndex="#{investigationCategoryController.manageItemIndex}" >
                             <p:ajax process="@this" ></p:ajax>
                             <p:tab title="Manage Metadata">
                                 <div class="d-grid gap-2">
