--- a/src/main/webapp/admin/lims/upload_investigations.xhtml
+++ b/src/main/webapp/admin/lims/upload_investigations.xhtml
@@ -7,14 +7,18 @@
 
     <body>
 
-        <ui:composition template="./../admin_items_index.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
-            <ui:define name="item">
+            <ui:define name="subcontent">
 
                 <h:form id="form" enctype="multipart/form-data" >
 
-                    <p:fileUpload value="#{investigationController.file}" mode="simple"/>
-                    <h:commandButton value="Submit" action="#{investigationController.uploadJsonToCreateAnInvestigations()}" />
+                    <p:fileUpload 
+                        value="#{investigationController.file}" 
+                        mode="simple"/>
+                    <h:commandButton 
+                        value="Submit" 
+                        action="#{investigationController.uploadJsonToCreateAnInvestigations()}" />
 
                 </h:form>
 
