Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/lims/calculation.xhtml
+++ b/src/main/webapp/admin/lims/calculation.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:body>
-        <ui:composition template="/lab/administration.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
             <ui:define name="subcontent">
                 <h:form >
                     <p:panel header="Manage Investigatio Calculations" >
