--- a/src/main/webapp/admin/lims/manage_fees.xhtml
+++ b/src/main/webapp/admin/lims/manage_fees.xhtml
@@ -10,7 +10,7 @@
     </h:head>
     <h:body>
 
-        <ui:composition template="/admin_fees.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
             <ui:define name="subcontent">
 
