--- a/src/main/webapp/admin/lims/index.xhtml
+++ b/src/main/webapp/admin/lims/index.xhtml
@@ -51,14 +51,20 @@
                             </p:tab>
                             <p:tab title="Manage Investigations">
                                 <div class="d-grid gap-2">
-                                    <p:commandButton   class="w-100"  ajax="false" value="Add Investigation" 
+                                    <p:commandButton   
+                                        class="w-100"  ajax="false" value="Add Investigation" 
                                                        action="#{investigationController.navigateToAddInvestigation()}" />
-                                    <p:commandButton   class="w-100" ajax="false" value="List Investigation" 
+                                    <p:commandButton   
+                                        class="w-100" ajax="false" value="List Investigation" 
                                                        action="#{investigationController.navigateToListInvestigation()}" />
-                                    <p:commandButton   class="w-100" ajax="false" value="Investigation Fees" action="#{investigationCategoryController.navigateToInvestigationFees()}" />
-                                    <p:commandButton   class="w-100"  ajax="false" value="Add Investigation Category" action="#{investigationCategoryController.navigateToAddInvestigationCategory()}" />
-                                    <p:commandButton   class="w-100"  ajax="false" value="List Investigation Categories" action="#{investigationCategoryController.navigateToListInvestigationCategories()}" />
-                                    <p:commandButton   class="w-100"  ajax="false" value="Manage Investigations" action="#{investigationCategoryController.navigateToInvestigations()}" />
+                                    <p:commandButton   class="w-100" ajax="false" value="Investigation Fees" 
+                                                       action="#{investigationCategoryController.navigateToInvestigationFees()}" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Add Investigation Category" 
+                                                       action="#{investigationCategoryController.navigateToAddInvestigationCategory()}" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="List Investigation Categories" 
+                                                       action="#{investigationCategoryController.navigateToListInvestigationCategories()}" />
+                                    <p:commandButton   class="w-100"  ajax="false" value="Manage Investigations" 
+                                                       action="#{investigationCategoryController.navigateToInvestigations()}" />
                                     <p:commandButton   class="w-100"  ajax="false" value="Upload Investigations" action="#{investigationCategoryController.navigateToInvestigationFormat()}" />
                                 </div>
                             </p:tab>
