--- a/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
+++ b/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
@@ -9,7 +9,7 @@
 
     <h:body>
 
-        <ui:composition template="/lab/administration.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
             <ui:define name="subcontent">
                 <h:form id="form">
