--- a/src/main/webapp/admin/lims/investigation_item_validator.xhtml
+++ b/src/main/webapp/admin/lims/investigation_item_validator.xhtml
@@ -6,9 +6,9 @@
 
     <h:body>
 
-        <ui:composition template="././resources/template/template.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
-            <ui:define name="content">
+            <ui:define name="subcontent">
                 content
             </ui:define>
 
