closes #907 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/lims/analyzer_test.xhtml
+++ b/src/main/webapp/admin/lims/analyzer_test.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="/lab/administration.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
             <ui:define name="title">
                 Manage Analyzer Tests
