--- a/src/main/webapp/admin/lims/investigation.xhtml
+++ b/src/main/webapp/admin/lims/investigation.xhtml
@@ -201,36 +201,70 @@
                                 </p:panelGrid>
 
                             </p:tab>
-                            <p:tab title="Links" >
-                                <h:panelGrid columns="2" >
-                                    <p:commandLink 
+                            <p:tab title="Manage" >
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         ajax="false" 
                                         action="#{investigationController.navigateToEditFormatSingle()}" 
-                                        value="Report Format - Single Item" ></p:commandLink>
-                                    <p:commandLink 
+                                        value="Manage Format - Single Item" ></p:commandButton>
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         ajax="false" 
-                                        action="#{investigationController.navigateToEditFormatMultiple() }" value="Report Format - All Items" ></p:commandLink>
-                                    <p:commandLink
+                                        action="#{investigationController.navigateToEditFormatMultiple()}" 
+                                        value="Manage Format - All Items" ></p:commandButton>
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         ajax="false" 
-                                        action="#{investigationController.navigateToManageCalculations() }" value="Calculations" ></p:commandLink>
-                                    <p:commandLink 
+                                        action="#{investigationController.navigateToManageCalculations()}" 
+                                        value="Manage Calculations" ></p:commandButton>
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         ajax="false" 
-                                        action="#{investigationController.navigateToReplaceableInvestigations()}" value="Replaceable Ix" ></p:commandLink>
-                                    <p:commandLink 
+                                        action="#{investigationController.navigateToReplaceableInvestigations()}" 
+                                        value="Manage Replaceable Investigations" ></p:commandButton>
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         ajax="false" 
-                                        action="#{investigationController.navigateToManageReportComponents()}" value="List of Investigation's Items" ></p:commandLink>
-                                    <p:commandLink 
-                                        ajax="false" 
-                                        action="#{investigationController.toLoadParentInvestigation()}" 
-                                        value="Load Parent Investigation" ></p:commandLink>
-                                    <p:commandLink
+                                        action="#{investigationController.navigateToManageReportComponents()}" 
+                                        value="Manage Format Componants"
+                                        ></p:commandButton>
+
+                                    <p:commandButton                                                 
+                                        class="w-100" 
                                         disabled="#{!webUserController.hasPrivilege('AdminPrices')}"
                                         ajax="false" 
                                         action="#{investigationController.navigateToManageFees()}"
-                                        actionListener="#{viewController.makeInvestigationAsPreviousPage()}"
-                                        value="Prices" ></p:commandLink>
-                                </h:panelGrid>                                                                                
+                                        value="Prices" ></p:commandButton>
 
+
+                                    <p:commandButton 
+                                        class="w-100" 
+                                        ajax="false" 
+                                        value="Manage Valuesets" 
+                                        action="#{investigationController.navigateToManageValueSetsForAdmin()}" />
+
+
+
+                                    <p:commandButton class="w-100" ajax="false" value="Flags" action="/lab/flags" />
+                                    <p:commandButton class="w-100" ajax="false" value="Calculations" action="/lab/calculation" />
+                                    <p:commandButton class="w-100" ajax="false" value="Dynamic Labels" action="/lab/dynamic_labels" />
+                                    <p:commandButton class="w-100" ajax="false" value="Validators" action="/lab/investigation_value_component" />
+                                    
+
+
+                                    <p:commandButton
+                                        class="w-100" 
+                                        ajax="false" 
+                                        action="#{investigationController.toLoadParentInvestigation()}" 
+                                        value="Load Parent Investigation" ></p:commandButton>
+                                    <p:commandButton                                                 
+                                        class="w-100" 
+                                        ajax="false" 
+                                        action="#{investigationController.navigateToListInvestigation()}" 
+                                        value="List of Investigations"
+                                        ></p:commandButton>
+                                </h:panelGrid>
                             </p:tab>
                         </p:tabView>
 
