--- a/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
+++ b/src/main/webapp/admin/lims/investigation_format_multiple.xhtml
@@ -19,6 +19,10 @@
                             <p:panel header="Investigation">
                                 <f:facet name="header" >
                                     <h:outputText value="Investigation" ></h:outputText>
+                                    <p:commandButton 
+                                        value="Back" 
+                                        action="/admin/lims/investigation" ajax="false" ></p:commandButton>
+
                                 </f:facet>
                                 <h:panelGrid columns="1" >
                                     <p:panelGrid columns="1">
