--- a/src/main/webapp/admin/lims/pathology_format.xhtml
+++ b/src/main/webapp/admin/lims/pathology_format.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="/lab/administration.xhtml">
+        <ui:composition template="/admin/lims/index.xhtml">
 
             <ui:define name="subcontent">
 
