Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/items/relationships.xhtml
+++ b/src/main/webapp/admin/items/relationships.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin/items/admin_items_index.xhtml">
+        <ui:composition template="/admin/items/index.xhtml">
 
             <ui:define name="item">
                 <h:form>
