--- a/src/main/webapp/theater/inward_bill_surgery.xhtml
+++ b/src/main/webapp/theater/inward_bill_surgery.xhtml
@@ -67,7 +67,7 @@
                                     </h:outputLabel>
                                     <p:autoComplete forceSelection="true"
                                                     value="#{surgeryBillController.batchBill.procedure.item}" 
-                                                    completeMethod="#{procedureController.completeDiagnosis}"
+                                                    completeMethod="#{procedureController.completeProcedures}"
                                                     var="apt2" itemLabel="#{apt2.name}"
                                                     itemValue="#{apt2}" size="30"  style="width: 400px;">
                                     </p:autoComplete>
