--- a/src/main/webapp/admin/items/religion.xhtml
+++ b/src/main/webapp/admin/items/religion.xhtml
@@ -37,7 +37,7 @@
     </h:head>
     <h:body>
 
-        <ui:composition template="/admin/items/admin_items_index.xhtml">
+        <ui:composition template="/admin/items/index.xhtml">
             <ui:define name="item">
                 <h:form>
                     <p:panel header="Manage Religions" >
