--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -23,7 +23,7 @@
                                                            action="/reports/asset_register" />
                                         <p:commandButton   class="w-100" ajax="false" value="PO Status Report" 
                                                            action="/reports/po_status_report" />
-                                        <p:commandButton   class="w-100" ajax="false" value="Investigation Fees" action="#{investigationCategoryController.navigateToInvestigationFees()}" />
+                                        <p:commandButton   class="w-100" ajax="false" value="Employee Asset Issue" action="/reports/employee_asset_issue" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Add Investigation Category" action="#{investigationCategoryController.navigateToAddInvestigationCategory()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="List Investigation Categories" action="#{investigationCategoryController.navigateToListInvestigationCategories()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="Manage Investigations" action="#{investigationCategoryController.navigateToInvestigations()}" />
